[#5904 MM#35187] Allow text wrapping in the issues list

--- a/assets/stylesheets/redmine-reset.css
+++ b/assets/stylesheets/redmine-reset.css
@@ -19,3 +19,6 @@ ul.projects ul {border: none; }
 
 /* Reset Questions */
 div.question { background: none; border: none; margin-bottom: 15px; padding: 0;}
+
+/* Allow wrapping in the issue list */
+tr.issue { white-space: normal; }
